--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,19 +23,15 @@
 
 <div class="content" role="main">
 
- 
 
+  <fileupload> </fileupload>
 
   <!-- Footer -->
   <footer>
-      File management portal
-     
-     
+      File management portal       
   </footer>
 
- 
-
-</div>
+ </div>
 
 <style>
   :host {
